# weather

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: test.yml
scripts/: weather.py
scripts/pyphd/weather/: _epw_schema.py  _tools.py  epw.py
tests/: test_epw.py
utilities/scripts/: _weather.py
utilities/scripts/pyphd/: weather.py
weather/: __init__.py  _tools.py  epw.py
