[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather"
version = "0.1.0.dev0"
authors = [{ name = "Cheng Cui", email = "cheng.cui.95@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["pandas>=2.2.2"]

[dependency-groups]
dev = ["pytest-cov==5.*", "pytest==8.*"]

[tool.ruff.lint]
extend-select = ["I", "PGH", "UP", "N"]
ignore = ["E741"]

[tool.pytest.ini_options]
addopts = ["--cov=weather", "--cov-report=term-missing"]
testpaths = ["tests"]
